update
fix error Illegal base64 character 20